[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sounds/pirate-loot-menu-song.mp3" type="AudioStream" id=1]
[ext_resource path="res://Scripts/MusicController.gd" type="Script" id=2]
[ext_resource path="res://Sounds/fase-um-song.mp3" type="AudioStream" id=3]
[ext_resource path="res://Sounds/fase-tres-song.mp3" type="AudioStream" id=4]
[ext_resource path="res://Sounds/fase-dois-song.mp3" type="AudioStream" id=5]

[node name="MusicController" type="Node2D"]
script = ExtResource( 2 )

[node name="bgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[node name="level1Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="level2Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="level3Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
